# linear

./: CMakeLists.txt  CSVReader.cxx  CSVReader.h  Config.h  Data.cxx  Data.h  IO.cxx  IO.h  Net.h  Test.cxx  Test.h  Train.cxx  Train.h  main.cxx
